add account suppression functionnality

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 
-###> symfony/framework-bundle ###
+###> symfony/framework-bundle 
+###
 /.env
 /public/bundles/
 /var/
 /vendor/
-###< symfony/framework-bundle ###
+
+###< symfony/framework-bundle
